After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722136 - menu not updated after download finishes
menu not updated after download finishes
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Downloads
git master
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-01-13 21:31 UTC by William Jon McCann
Modified: 2014-01-14 18:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix sensitivity of download popup menu (3.45 KB, patch)
2014-01-13 21:53 UTC, William Jon McCann
committed Details | Review

Description William Jon McCann 2014-01-13 21:31:44 UTC
The download bar context popup menu doesn't update once the download finishes or fails.

<KaL> mccann: I think it's because the popup menu was always created when button was clicked, but now it's created only once
<KaL> mccann: I guess we just need to call add_popup_menu when the download finishes
<KaL> f24d612266b4dbf27c4ce91f3807e1f38a139bd9 <- I think this broke it
Comment 1 William Jon McCann 2014-01-13 21:53:41 UTC
Created attachment 266209 [details] [review]
Fix sensitivity of download popup menu
Comment 2 Carlos Garcia Campos 2014-01-14 17:37:04 UTC
Review of attachment 266209 [details] [review]:

Perfect! Thanks
Comment 3 William Jon McCann 2014-01-14 18:10:09 UTC
Attachment 266209 [details] pushed as 1df0a59 - Fix sensitivity of download popup menu