Fix sensitivity of download popup menu

https://bugzilla.gnome.org/show_bug.cgi?id=722136